# movies_api

./: .env.example  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  readme.md
nginx/: nginx.conf  site.conf
src/: main.py  run.py
src/api/: exceptions.py
src/api/v1/: films.py  genres.py  persons.py
src/core/: config.py  constants.py  exceptions.py  logger.py
src/db/: core.py  redis.py
src/dependencies/: auth.py
src/models/: auth.py  core.py  films.py  genres.py  params.py  persons.py
src/services/: core.py  films.py  genres.py  persons.py
tests/functional/: .dockerignore  .env.example  Dockerfile  conftest.py  docker-compose.yml  requirements.txt
tests/functional/core/: constants.py  settings.py
tests/functional/fixtures/: connections.py  elastic.py  requests.py
tests/functional/src/: test_films.py  test_genres.py  test_one.py  test_persons.py
tests/functional/testdata/: common.py  films.py  genres.py  persons.py
tests/functional/testdata/schemas/: movies.json
tests/functional/utils/: elastic.py  json_reader.py  redis.py  requests.py
