[tool.poetry]
name = "Movies API"
version = "0.1.0"
description = ""
authors = ["Dan <babindj@uriit.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
aioredis = "1.3.1"
elasticsearch = {version = "~=7.9.1", extras = ["async"]}
fastapi = "0.61.1"
orjson = "3.4.1"
pydantic = "1.9.0"
uvicorn = "0.12.2"
uvloop = "0.14.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
