[tool.poetry]
name = "Movies API"
version = "0.1.0"
description = ""
authors = ["Dan <babindj@uriit.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
aioredis = "1.3.1"
elasticsearch = {version = "~=7.9.1", extras = ["async"]}
uvicorn = "0.12.2"
uvloop = "0.14.0"
python-dotenv = "^0.21.0"
fastapi = "^0.85.0"
pydantic = "^1.10.2"
orjson = "^3.8.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
